Fixed services font size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1034,7 +1034,6 @@ footer .container .footer-socials i {
     #services {
         .service-body {
             margin: 2.5rem 0;
-            /* padding-inline: 2rem; */
             .service-item {
                 .container {
                     flex-direction: column-reverse;
@@ -1057,6 +1056,9 @@ footer .container .footer-socials i {
                 width: 80%;
                 .section-title {
                     margin-bottom: 1.5rem;
+                }
+                .service-p {
+                    font-size: var(--fs-small-200);
                 }
             }
         }
